# Screensavr

./: .gitignore  CMakeLists.txt  README.md
shaders/: fragment.glsl  vertex.glsl
src/: app.cpp  app.hpp  main.cpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
